--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,9 @@ dependencies:
   get: ^4.7.3
   flutter_animate: ^4.5.2
   auto_size_text: ^3.0.0
+  intl: ^0.20.2
+  pdf: ^3.11.3
+  printing: ^5.14.2
 
 dev_dependencies:
   flutter_test:
